fix background color in coming contest in exam page

--- a/public/stylesheets/pure-release-0.6.0/slide-menu.css
+++ b/public/stylesheets/pure-release-0.6.0/slide-menu.css
@@ -256,7 +256,7 @@ table .running {
 table .closed {
     background: rgba(128, 128, 128, 0.30);
 }
-table .comming {
+table .coming {
     background: rgba(255, 0, 0, 0.30);
 }
 .pure-img-responsive {
