--- a/public/stylesheets/pure-release-0.6.0/slide-menu-dark.css
+++ b/public/stylesheets/pure-release-0.6.0/slide-menu-dark.css
@@ -265,7 +265,7 @@ table .running {
 table .closed {
   background: rgba(128,128,128,0.30);
 }
-table .comming {
+table .coming {
   background: rgba(255, 0, 0, 0.30);
 }
 
@@ -701,27 +701,27 @@ abbr[title] {
 .pure-table-submitowner {
     background-color: rgba(0, 0, 0, 0.2);
 }
-.tooltip { 
+.tooltip {
   font-family: ChekiangShuKeSung, "Times New Roman", "Georgia", "Helvetica Neue", "Helvetica", "Microsoft YaHei", "WenQuanYi Micro Hei", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  outline:none; 
+  outline:none;
 }
 .tooltip strong { line-height:30px; }
-.tooltip:hover {text-decoration:none;} 
+.tooltip:hover {text-decoration:none;}
 .tooltip .popup {
     z-index: 10;
-    display: none; 
+    display: none;
     padding: 14px 20px;
-    margin-top:-30px; 
+    margin-top:-30px;
     margin-left:28px;
-    width:300px; 
+    width:300px;
     line-height: 1.5em;
 }
 .tooltip:hover .popup {
-    display:inline; 
-    position:absolute; 
+    display:inline;
+    position:absolute;
     color:#111;
-    border:1px 
-    solid #DCA; 
+    border:1px
+    solid #DCA;
     background: #fffAF0;
 }
 .tooltip .popup {
