use google form for account registration

--- a/views/_partial/_user/login.ejs
+++ b/views/_partial/_user/login.ejs
@@ -36,7 +36,7 @@
 				<button type="submit" name="submit" id="submit" class="pure-button pure-input-1 pure-button-primary"><%= __('Login') %></button>
 				<div class="pure-controls">
 					<a href="https://www.facebook.com/ntucsiec2014xiaominglin/" class="comment"><%= __('Forgot password?') %></a>
-					<a href="https://www.facebook.com/ntucsiec2014xiaominglin/" class="comment"><%= __('Create an account.') %></a>
+					<a href="https://docs.google.com/forms/d/e/1FAIpQLSdRpZkZaW0E1G0D4PLtyl3uAhYOrCsRX41tOkC0J-hyfGj7sw/viewform" target="_blank" class="comment"><%= __('Create an account.') %></a>
         </div>
 		    </fieldset>
 		</form>
