remove sign up page for not using registration key anymore

--- a/views/_partial/head.ejs
+++ b/views/_partial/head.ejs
@@ -68,9 +68,9 @@
 				<li class="pure-menu-item">
 					<a class="pure-menu-link" href="<%= site.url_for('login') %>"><i class="fa fa-sign-in"></i> <%= __('Login') %></a>
 				</li>
-				<li class="pure-menu-item">
-					<a class="pure-menu-link" href="<%= site.url_for('signup') %>"><i class="fa fa-sign-in"></i> <%= __('Sign up') %></a>
-				</li>
+				<!-- <li class="pure-menu-item"> -->
+				<!--     <a class="pure-menu-link" href="<%= site.url_for('signup') %>"><i class="fa fa-sign-in"></i> <%= __('Sign up') %></a> -->
+				<!-- </li> -->
 			<% } else { %>
 				<li class="pure-menu-item">
 					<a href="#" id="menuLink1" class="pure-menu-link"><i class="fa fa-user"></i> <%- user.lgn %> <i class="fa fa-caret-down"></i></a>
