disable MathJax in report layout

--- a/views/_partial/after-footer.ejs
+++ b/views/_partial/after-footer.ejs
@@ -1,7 +1,7 @@
 <!-- -->
 
 <%
-    var forbiddenLayoutList = ['login', 'edit', 'register', 'user', 'ranklist'];
+    var forbiddenLayoutList = ['login', 'edit', 'register', 'user', 'ranklist', 'report'];
     var MathJaxScriptNeed = forbiddenLayoutList.indexOf(layout) == -1;
     // console.log(`need MathJax: ${MathJaxScriptNeed}`);
 %>
