--- a/views/_partial/_problem/problem.ejs
+++ b/views/_partial/_problem/problem.ejs
@@ -234,7 +234,7 @@
 	    	<% for (var i in testdata_config) { %>
 	    		<% var testset = testdata_config[i]; %>
 	    		<li class="pure-menu-item">
-	    			<a target="_blank" href="<%- site.url_for(site.HOST.testdata) %><%- pid %>/<%- testset[1][0] %>" class="pure-menu-link" style="padding: 0em 0.1em;">
+	    			<a target="_blank" href="<%- site.url_for(site.HOST.testdata) %>/<%- pid %>/<%- testset[1][0] %>" class="pure-menu-link" style="padding: 0em 0.1em;">
 	    			<%- __('Subtask') %> <%- (parseInt(i)) %> (<%- testset[0] %>%): <%- config.unitConvert('cpu', testset[1][2]*1000) %>, <%- config.unitConvert('mem', testset[1][3]) %>
 	    			</a>
 	    		</li>
@@ -289,6 +289,6 @@ $('.upload-switch-button').click(function(elem) {
     tour.start().oncomplete(function() {
       window.location.href = '/submissions?pid=3?multipage=true';
     });
-    $('.introjs-bullets li a')[0].className = 'active'; 
+    $('.introjs-bullets li a')[0].className = 'active';
   }
 </script>
