Provide hasReport in API /api/result.

--- a/views/_partial/_submission/livesubmission.ejs
+++ b/views/_partial/_submission/livesubmission.ejs
@@ -207,6 +207,7 @@
                                     tmp[i].scr = submit_list[i].scr;
                                     tmp[i].cpu = submit_list[i].cpu;
                                     tmp[i].mem = submit_list[i].mem;
+                                    tmp[i].hasReport = submit_list[i].hasReport;
                                     options.modify_flag = true;
                                 }
                             }
