Enable cpp for problem 4.

--- a/views/_partial/_problem/problem.ejs
+++ b/views/_partial/_problem/problem.ejs
@@ -2,9 +2,7 @@
 	var pid = pinfo.pid,
 		ttl = pinfo.ttl,
 		uid = user["uid"];
-	var judge_res = site.JUDGE.result_message,
-    	judge_lng = site.JUDGE.lang,
-    	judge_compiler_arg = site.JUDGE.compiler_arg;
+	var judge_res = site.JUDGE.result_message;
 	var unitConvert = site.unitConvert;
 %>
 <link rel="stylesheet" type="text/css" href="<%= site.url_for('stylesheets/shThemeDefault.css') %>" />
