Hide the score page for not using it currently.

--- a/views/_partial/head.ejs
+++ b/views/_partial/head.ejs
@@ -78,9 +78,9 @@
 						<li class="pure-menu-item">
 							<a class="pure-menu-link" href="<%= site.url_for('user/' + user.uid) %>"><i class="fa fa-tasks"></i> <%= __('My Progress') %></a>
 						</li>
-						<li class="pure-menu-item">
-							<a class="pure-menu-link" href="<%= site.url_for('score') %>"><i class="fa fa-database"></i> <%= __('My Score') %></a>
-						</li>
+						<!-- <li class="pure-menu-item"> -->
+						<!--     <a class="pure-menu-link" href="<%= site.url_for('score') %>"><i class="fa fa-database"></i> <%= __('My Score') %></a> -->
+						<!-- </li> -->
 						<li>
 							<a class="pure-menu-link" href="<%= site.url_for('edit') %>"><i class="fa fa-cogs"></i> <%= __('Profile') %></a>
 						</li class="pure-menu-item">
