--- a/views/_partial/_widget/submission_table.ejs
+++ b/views/_partial/_widget/submission_table.ejs
@@ -52,7 +52,7 @@
                         if (sl[i].guildTitle === null) {
                             guildIcon = '';
                         } else {
-                            guildIcon = `<img src="/images/guilds/${sl[i].guildIcon}" alt="{${sl[i].guildTitle}}" height="28" width="28" style="vertical-align:middle">`;
+                            guildIcon = `<img src="/images/guilds/${sl[i].guildIcon}" title="${sl[i].guildTitle}" height="48" width="48" style="vertical-align:middle">`;
                         }
                     %>
                     <%- guildIcon %>
