Display indents and escape special characters in report page.

--- a/views/_partial/_report/report.ejs
+++ b/views/_partial/_report/report.ejs
@@ -9,7 +9,7 @@
     <h3>Report</h3>
     <div class="pure-g">
         <div class="pure-u-5-5">
-            <%- report_raw %>
+            <pre><%- report_raw %></pre>
         </div>
     </div>
 </div>
