Add page /report/problem/:pid.

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -53,6 +53,8 @@
               <%- include('_partial/_testdata/download') %>
             <% } else if (layout == 'report') { %>
               <%- include('_partial/_report/report') %>
+            <% } else if (layout == 'problem_report') { %>
+              <%- include('_partial/_report/problem') %>
             <% } %>
           </section>
       </div>
